2006-03-26  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (MergeSourceDocumentation): don't output warnings
	for overridden titles, since that happens a lot. (#320010)

	* configure.in: check for pkg-config >= 0.19.

	* Makefile.am (pkgconfigdir): put the .pc file in $(datadir) rather
	than $(libdir), since gtk-doc is architecture-independant. (#120950)

	* configure.in: removed the hard dependancy on openjade or jade, since
	XML is used mostly now rather than SGML. We just output a warning
	rather than an error if neither openjade or jade are found.

2006-03-21  Stefan Kost  <ensonic@users.sf.net>

	* style.css:
	add sect1 to pages with top-page offset adjustment (#166363)

2006-03-19  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scan.in (ScanHeader): try to handle the start of function
	declarations spread over 3 lines. (#321708, Jorn Baayen)

2006-03-19  Damon Chaplin  <damon@gnome.org>

	(OutputOldParams): don't bother outputting unused parameters if they
	don't have any documentation as that is pointless.

2006-03-19  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mktmpl.in (ReadTemplateFile): Add a workaround for an old
	bug handling macros with arguments spread over several lines. (#318666)

2006-03-19  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (MakeIndexterms): Make sure we still output an index
	term if there isn't 'deprecated' or 'since' info.
	(#334851, Tommi Komulainen).

2006-03-19  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scan.in (ScanHeader): added "--ignore-decorators" option to
	ignore a list of declarators in function declarations.
	(#316512, Bertram Felgenhauer).

2006-03-19  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (GetSignals, GetArgs): call MakeIndexTerms() to make
	sure that signals appear in the deprecated/new symbol indices.
	(#332007, Tommi Komulainen).

2006-03-19  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (OutputEnum, ExpandAbbreviations, symbolify): 