@@ -1,3 +1,8 @@
+2006-03-29  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtkdoc-scangobj.in:
+	missing '*' for arg in signal prototype in docs (#335486)
+
 2006-03-26  Damon Chaplin  <damon@gnome.org>
 
 	* gtkdoc-mkdb.in (MergeSourceDocumentation): don't output warnings
